parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CDER
    CIZQ
    DELETE
    ISNEGADO
    MOD
    NEW

Grammar

Rule 0     S' -> cuerpo
Rule 1     cuerpo -> instrucciones
Rule 2     cuerpo -> funcion
Rule 3     cuerpo -> estrcontrol
Rule 4     cuerpo -> def_clase
Rule 5     instrucciones -> instruccion PUNTOYCOMA
Rule 6     instrucciones -> instruccion PUNTOYCOMA instrucciones
Rule 7     instrucciones -> BREAK PUNTOYCOMA
Rule 8     instrucciones -> CONTINUE PUNTOYCOMA
Rule 9     instrucciones -> RETURN VARIABLE PUNTOYCOMA
Rule 10    instrucciones -> TYPEOF VARIABLE
Rule 11    instrucciones -> VARIABLE INSTANCEOF VARIABLE
Rule 12    instruccion -> asignacion
Rule 13    instruccion -> expression
Rule 14    instruccion -> comparacion
Rule 15    instruccion -> declaracion
Rule 16    instruccion -> declaasig
Rule 17    instruccion -> operadores
Rule 18    declaracion -> VAR VARIABLE
Rule 19    declaracion -> LET VARIABLE
Rule 20    declaasig -> VAR asignacion
Rule 21    declaasig -> LET asignacion
Rule 22    declaasig -> CONST asignacion
Rule 23    estrcontrol -> if
Rule 24    estrcontrol -> for
Rule 25    estrcontrol -> while
Rule 26    estrcontrol -> dowhile
Rule 27    estrcontrol -> switch
Rule 28    valor -> ENTERO
Rule 29    valor -> FLOAT
Rule 30    valor -> STRING
Rule 31    valor -> BOOL
Rule 32    if -> IF PIZQ comparacion PDER LIZQ instrucciones LDER
Rule 33    if -> IF PIZQ comparacion PDER LIZQ instrucciones LDER elseif
Rule 34    if -> IF PIZQ comparacion PDER LIZQ instrucciones LDER else
Rule 35    elseif -> ELSE IF PIZQ comparacion PDER LIZQ instrucciones LDER
Rule 36    elseif -> ELSE IF PIZQ comparacion PDER LIZQ instrucciones LDER elseif
Rule 37    elseif -> ELSE IF PIZQ comparacion PDER LIZQ instrucciones LDER else
Rule 38    else -> ELSE LIZQ instrucciones LDER
Rule 39    else -> ELSE LIZQ LDER
Rule 40    for -> FOR PIZQ declaasig PUNTOYCOMA comparacion PUNTOYCOMA operadores PDER LIZQ instrucciones LDER
Rule 41    for -> FOR PIZQ declaasig PUNTOYCOMA comparacion PUNTOYCOMA asignacion PDER LIZQ instrucciones LDER
Rule 42    for -> FOR PIZQ declaracion IN VARIABLE PDER LIZQ instrucciones LDER
Rule 43    while -> WHILE PIZQ comparacion PDER LIZQ instrucciones LDER
Rule 44    dowhile -> DO LIZQ instrucciones LDER WHILE PIZQ comparacion PDER
Rule 45    switch -> SWITCH PIZQ VARIABLE PDER LIZQ cases LDER
Rule 46    cases -> CASE VARIABLE DOSPUNTOS instrucciones
Rule 47    cases -> CASE VARIABLE DOSPUNTOS instrucciones cases
Rule 48    cases -> DEFAULT DOSPUNTOS instrucciones
Rule 49    throw -> THROW VARIABLE PUNTOYCOMA
Rule 50    trycatch -> TRY LIZQ instrucciones LDER CATCH PIZQ VARIABLE PDER LIZQ instrucciones LDER
Rule 51    trycatch -> TRY LIZQ instrucciones LDER FINALLY LIZQ instrucciones LDER
Rule 52    trycatch -> TRY LIZQ instrucciones LDER CATCH PIZQ VARIABLE PDER LIZQ instrucciones LDER FINALLY LIZQ instrucciones LDER
Rule 53    asignacion -> VARIABLE IGUAL expression
Rule 54    asignacion -> VARIABLE IGUAL comparacion
Rule 55    asignacion -> VARIABLE IGUAL valor
Rule 56    comparacion -> expression comparador expression
Rule 57    comparacion -> expression comparador expression DAMPERSAND comparacion
Rule 58    comparacion -> expression comparador expression DTUBO comparacion
Rule 59    comparacion -> STRING DIGUAL STRING
Rule 60    comparador -> MAYOR
Rule 61    comparador -> MENOR
Rule 62    comparador -> MAYIGUAL
Rule 63    comparador -> MENIGUAL
Rule 64    comparador -> DIGUAL
Rule 65    comparador -> NOIGUAL
Rule 66    operadores -> VARIABLE DSUMA
Rule 67    operadores -> VARIABLE DRESTA
Rule 68    expression -> expression SUMA term
Rule 69    expression -> VARIABLE SUMA VARIABLE
Rule 70    expression -> expression RESTA term
Rule 71    expression -> VARIABLE RESTA VARIABLE
Rule 72    expression -> term
Rule 73    expression -> VARIABLE
Rule 74    term -> term MULTI factor
Rule 75    term -> VARIABLE MULTI VARIABLE
Rule 76    term -> term DIV factor
Rule 77    term -> VARIABLE RESTA VARIABLE
Rule 78    term -> factor
Rule 79    factor -> ENTERO
Rule 80    factor -> FLOAT
Rule 81    expression -> PIZQ expression PDER
Rule 82    expression -> LIZQ expression LDER
Rule 83    funcion -> FUNCTION VARIABLE PIZQ argumentos PDER LIZQ instrucciones LDER
Rule 84    funcion -> FUNCTION VARIABLE PIZQ argumentos PDER LIZQ LDER
Rule 85    funcion -> FUNCTION VARIABLE PIZQ PDER LIZQ instrucciones LDER
Rule 86    funcion -> FUNCTION VARIABLE PIZQ PDER LIZQ LDER
Rule 87    argumentos -> VARIABLE
Rule 88    argumentos -> VARIABLE COMA argumentos
Rule 89    constructor -> CONSTRUCTOR PIZQ argumentos PDER LIZQ p_metodo_cuerpo_class LDER
Rule 90    constructor -> CONSTRUCTOR PIZQ PDER LIZQ p_metodo_cuerpo_class LDER
Rule 91    var_class -> THIS PUNTO VARIABLE
Rule 92    var_class -> THIS PUNTO VARIABLE IGUAL valor
Rule 93    var_class -> THIS PUNTO VARIABLE IGUAL VARIABLE
Rule 94    p_metodo_cuerpo_class -> cuerpo
Rule 95    p_metodo_cuerpo_class -> var_class
Rule 96    p_metodo_cuerpo_class -> p_metodo_cuerpo_class
Rule 97    metodos_class -> funcion
Rule 98    metodos_class -> funcion metodos_class
Rule 99    cuerpo_class -> metodos_class
Rule 100   cuerpo_class -> constructor
Rule 101   cuerpo_class -> constructor metodos_class
Rule 102   def_clase -> CLASS VARIABLE LIZQ cuerpo_class LDER
Rule 103   def_clase -> CLASS VARIABLE LIZQ LDER

Terminals, with rules where they appear

BOOL                 : 31
BREAK                : 7
CASE                 : 46 47
CATCH                : 50 52
CDER                 : 
CIZQ                 : 
CLASS                : 102 103
COMA                 : 88
CONST                : 22
CONSTRUCTOR          : 89 90
CONTINUE             : 8
DAMPERSAND           : 57
DEFAULT              : 48
DELETE               : 
DIGUAL               : 59 64
DIV                  : 76
DO                   : 44
DOSPUNTOS            : 46 47 48
DRESTA               : 67
DSUMA                : 66
DTUBO                : 58
ELSE                 : 35 36 37 38 39
ENTERO               : 28 79
FINALLY              : 51 52
FLOAT                : 29 80
FOR                  : 40 41 42
FUNCTION             : 83 84 85 86
IF                   : 32 33 34 35 36 37
IGUAL                : 53 54 55 92 93
IN                   : 42
INSTANCEOF           : 11
ISNEGADO             : 
LDER                 : 32 33 34 35 36 37 38 39 40 41 42 43 44 45 50 50 51 51 52 52 52 82 83 84 85 86 89 90 102 103
LET                  : 19 21
LIZQ                 : 32 33 34 35 36 37 38 39 40 41 42 43 44 45 50 50 51 51 52 52 52 82 83 84 85 86 89 90 102 103
MAYIGUAL             : 62
MAYOR                : 60
MENIGUAL             : 63
MENOR                : 61
MOD                  : 
MULTI                : 74 75
NEW                  : 
NOIGUAL              : 65
PDER                 : 32 33 34 35 36 37 40 41 42 43 44 45 50 52 81 83 84 85 86 89 90
PIZQ                 : 32 33 34 35 36 37 40 41 42 43 44 45 50 52 81 83 84 85 86 89 90
PUNTO                : 91 92 93
PUNTOYCOMA           : 5 6 7 8 9 40 40 41 41 49
RESTA                : 70 71 77
RETURN               : 9
STRING               : 30 59 59
SUMA                 : 68 69
SWITCH               : 45
THIS                 : 91 92 93
THROW                : 49
TRY                  : 50 51 52
TYPEOF               : 10
VAR                  : 18 20
VARIABLE             : 9 10 11 11 18 19 42 45 46 47 49 50 52 53 54 55 66 67 69 69 71 71 73 75 75 77 77 83 84 85 86 87 88 91 92 93 93 102 103
WHILE                : 43 44
error                : 

Nonterminals, with rules where they appear

argumentos           : 83 84 88 89
asignacion           : 12 20 21 22 41
cases                : 45 47
comparacion          : 14 32 33 34 35 36 37 40 41 43 44 54 57 58
comparador           : 56 57 58
constructor          : 100 101
cuerpo               : 94 0
cuerpo_class         : 102
declaasig            : 16 40 41
declaracion          : 15 42
def_clase            : 4
dowhile              : 26
else                 : 34 37
elseif               : 33 36
estrcontrol          : 3
expression           : 13 53 56 56 57 57 58 58 68 70 81 82
factor               : 74 76 78
for                  : 24
funcion              : 2 97 98
if                   : 23
instruccion          : 5 6
instrucciones        : 1 6 32 33 34 35 36 37 38 40 41 42 43 44 46 47 48 50 50 51 51 52 52 52 83 85
metodos_class        : 98 99 101
operadores           : 17 40
p_metodo_cuerpo_class : 89 90 96
switch               : 27
term                 : 68 70 72 74 76
throw                : 
trycatch             : 
valor                : 55 92
var_class            : 95
while                : 25

Parsing method: LALR

state 0

    (0) S' -> . cuerpo
    (1) cuerpo -> . instrucciones
    (2) cuerpo -> . funcion
    (3) cuerpo -> . estrcontrol
    (4) cuerpo -> . def_clase
    (5) instrucciones -> . instruccion PUNTOYCOMA
    (6) instrucciones -> . instruccion PUNTOYCOMA instrucciones
    (7) instrucciones -> . BREAK PUNTOYCOMA
    (8) instrucciones -> . CONTINUE PUNTOYCOMA
    (9) instrucciones -> . RETURN VARIABLE PUNTOYCOMA
    (10) instrucciones -> . TYPEOF VARIABLE
    (11) instrucciones -> . VARIABLE INSTANCEOF VARIABLE
    (83) funcion -> . FUNCTION VARIABLE PIZQ argumentos PDER LIZQ instrucciones LDER
    (84) funcion -> . FUNCTION VARIABLE PIZQ argumentos PDER LIZQ LDER
    (85) funcion -> . FUNCTION VARIABLE PIZQ PDER LIZQ instrucciones LDER
    (86) funcion -> . FUNCTION VARIABLE PIZQ PDER LIZQ LDER
    (23) estrcontrol -> . if
    (24) estrcontrol -> . for
    (25) estrcontrol -> . while
    (26) estrcontrol -> . dowhile
    (27) estrcontrol -> . switch
    (102) def_clase -> . CLASS VARIABLE LIZQ cuerpo_class LDER
    (103) def_clase -> . CLASS VARIABLE LIZQ LDER
    (12) instruccion -> . asignacion
    (13) instruccion -> . expression
    (14) instruccion -> . comparacion
    (15) instruccion -> . declaracion
    (16) instruccion -> . declaasig
    (17) instruccion -> . operadores
    (32) if -> . IF PIZQ comparacion PDER LIZQ instrucciones LDER
    (33) if -> . IF PIZQ comparacion PDER LIZQ instrucciones LDER elseif
    (34) if -> . IF PIZQ comparacion PDER LIZQ instrucciones LDER else
    (40) for -> . FOR PIZQ declaasig PUNTOYCOMA comparacion PUNTOYCOMA operadores PDER LIZQ instrucciones LDER
    (41) for -> . FOR PIZQ declaasig PUNTOYCOMA comparacion PUNTOYCOMA asignacion PDER LIZQ instrucciones LDER
    (42) for -> . FOR PIZQ declaracion IN VARIABLE PDER LIZQ instrucciones LDER
    (43) while -> . WHILE PIZQ comparacion PDER LIZQ instrucciones LDER
    (44) dowhile -> . DO LIZQ instrucciones LDER WHILE PIZQ comparacion PDER
    (45) switch -> . SWITCH PIZQ VARIABLE PDER LIZQ cases LDER
    (53) asignacion -> . VARIABLE IGUAL expression
    (54) asignacion -> . VARIABLE IGUAL comparacion
    (55) asignacion -> . VARIABLE IGUAL valor
    (68) expression -> . expression SUMA term
    (69) expression -> . VARIABLE SUMA VARIABLE
    (70) expression -> . expression RESTA term
    (71) expression -> . VARIABLE RESTA VARIABLE
    (72) expression -> . term
    (73) expression -> . VARIABLE
    (81) expression -> . PIZQ expression PDER
    (82) expression -> . LIZQ expression LDER
    (56) comparacion -> . expression comparador expression
    (57) comparacion -> . expression comparador expression DAMPERSAND comparacion
    (58) comparacion -> . expression comparador expression DTUBO comparacion
    (59) comparacion -> . STRING DIGUAL STRING
    (18) declaracion -> . VAR VARIABLE
    (19) declaracion -> . LET VARIABLE
    (20) declaasig -> . VAR asignacion
    (21) declaasig -> . LET asignacion
    (22) declaasig -> . CONST asignacion
    (66) operadores -> . VARIABLE DSUMA
    (67) operadores -> . VARIABLE DRESTA
    (74) term -> . term MULTI factor
    (75) term -> . VARIABLE MULTI VARIABLE
    (76) term -> . term DIV factor
    (77) term -> . VARIABLE RESTA VARIABLE
    (78) term -> . factor
    (79) factor -> . ENTERO
    (80) factor -> . FLOAT

    BREAK           shift and go to state 7
    CONTINUE        shift and go to state 8
    RETURN          shift and go to state 9
    TYPEOF          shift and go to state 11
    VARIABLE        shift and go to state 10
    FUNCTION        shift and go to state 12
    CLASS           shift and go to state 20
    IF              shift and go to state 27
    FOR             shift and go to state 28
    WHILE           shift and go to state 29
    DO              shift and go to state 30
    SWITCH          shift and go to state 31
    PIZQ            shift and go to state 13
    LIZQ            shift and go to state 14
    STRING          shift and go to state 33
    VAR             shift and go to state 34
    LET             shift and go to state 35
    CONST           shift and go to state 36
    ENTERO          shift and go to state 38
    FLOAT           shift and go to state 39

    cuerpo                         shift and go to state 1
    instrucciones                  shift and go to state 2
    funcion                        shift and go to state 3
    estrcontrol                    shift and go to state 4
    def_clase                      shift and go to state 5
    instruccion                    shift and go to state 6
    if                             shift and go to state 15
    for                            shift and go to state 16
    while                          shift and go to state 17
    dowhile                        shift and go to state 18
    switch                         shift and go to state 19
    asignacion                     shift and go to state 21
    expression                     shift and go to state 22
    comparacion                    shift and go to state 23
    declaracion                    shift and go to state 24
    declaasig                      shift and go to state 25
    operadores                     shift and go to state 26
    term                           shift and go to state 32
    factor                         shift and go to state 37

state 1

    (0) S' -> cuerpo .



state 2

    (1) cuerpo -> instrucciones .

    $end            reduce using rule 1 (cuerpo -> instrucciones .)
    LDER            reduce using rule 1 (cuerpo -> instrucciones .)


state 3

    (2) cuerpo -> funcion .

    $end            reduce using rule 2 (cuerpo -> funcion .)
    LDER            reduce using rule 2 (cuerpo -> funcion .)


state 4

    (3) cuerpo -> estrcontrol .

    $end            reduce using rule 3 (cuerpo -> estrcontrol .)
    LDER            reduce using rule 3 (cuerpo -> estrcontrol .)


state 5

    (4) cuerpo -> def_clase .

    $end            reduce using rule 4 (cuerpo -> def_clase .)
    LDER            reduce using rule 4 (cuerpo -> def_clase .)


state 6

    (5) instrucciones -> instruccion . PUNTOYCOMA
    (6) instrucciones -> instruccion . PUNTOYCOMA instrucciones

    PUNTOYCOMA      shift and go to state 40


state 7

    (7) instrucciones -> BREAK . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 41


state 8

    (8) instrucciones -> CONTINUE . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 42


state 9

    (9) instrucciones -> RETURN . VARIABLE PUNTOYCOMA

    VARIABLE        shift and go to state 43


state 10

    (11) instrucciones -> VARIABLE . INSTANCEOF VARIABLE
    (53) asignacion -> VARIABLE . IGUAL expression
    (54) asignacion -> VARIABLE . IGUAL comparacion
    (55) asignacion -> VARIABLE . IGUAL valor
    (69) expression -> VARIABLE . SUMA VARIABLE
    (71) expression -> VARIABLE . RESTA VARIABLE
    (73) expression -> VARIABLE .
    (66) operadores -> VARIABLE . DSUMA
    (67) operadores -> VARIABLE . DRESTA
    (75) term -> VARIABLE . MULTI VARIABLE
    (77) term -> VARIABLE . RESTA VARIABLE

  ! shift/reduce conflict for SUMA resolved as shift
  ! shift/reduce conflict for RESTA resolved as shift
    INSTANCEOF      shift and go to state 44
    IGUAL           shift and go to state 45
    SUMA            shift and go to state 46
    RESTA           shift and go to state 47
    MAYOR           reduce using rule 73 (expression -> VARIABLE .)
    MENOR           reduce using rule 73 (expression -> VARIABLE .)
    MAYIGUAL        reduce using rule 73 (expression -> VARIABLE .)
    MENIGUAL        reduce using rule 73 (expression -> VARIABLE .)
    DIGUAL          reduce using rule 73 (expression -> VARIABLE .)
    NOIGUAL         reduce using rule 73 (expression -> VARIABLE .)
    PUNTOYCOMA      reduce using rule 73 (expression -> VARIABLE .)
    DSUMA           shift and go to state 48
    DRESTA          shift and go to state 49
    MULTI           shift and go to state 50

  ! SUMA            [ reduce using rule 73 (expression -> VARIABLE .) ]
  ! RESTA           [ reduce using rule 73 (expression -> VARIABLE .) ]


state 11

    (10) instrucciones -> TYPEOF . VARIABLE

    VARIABLE        shift and go to state 51


state 12

    (83) funcion -> FUNCTION . VARIABLE PIZQ argumentos PDER LIZQ instrucciones LDER
    (84) funcion -> FUNCTION . VARIABLE PIZQ argumentos PDER LIZQ LDER
    (85) funcion -> FUNCTION . VARIABLE PIZQ PDER LIZQ instrucciones LDER
    (86) funcion -> FUNCTION . VARIABLE PIZQ PDER LIZQ LDER

    VARIABLE        shift and go to state 52


state 13

    (81) expression -> PIZQ . expression PDER
    (68) expression -> . expression SUMA term
    (69) expression -> . VARIABLE SUMA VARIABLE
    (70) expression -> . expression RESTA term
    (71) expression -> . VARIABLE RESTA VARIABLE
    (72) expression -> . term
    (73) expression -> . VARIABLE
    (81) expression -> . PIZQ expression PDER
    (82) expression -> . LIZQ expression LDER
    (74) term -> . term MULTI factor
    (75) term -> . VARIABLE MULTI VARIABLE
    (76) term -> . term DIV factor
    (77) term -> . VARIABLE RESTA VARIABLE
    (78) term -> . factor
    (79) factor -> . ENTERO
    (80) factor -> . FLOAT

    VARIABLE        shift and go to state 54
    PIZQ            shift and go to state 13
    LIZQ            shift and go to state 14
    ENTERO          shift and go to state 38
    FLOAT           shift and go to state 39

    expression                     shift and go to state 53
    term                           shift and go to state 32
    factor                         shift and go to state 37

state 14

    (82) expression -> LIZQ . expression LDER
    (68) expression -> . expression SUMA term
    (69) expression -> . VARIABLE SUMA VARIABLE
    (70) expression -> . expression RESTA term
    (71) expression -> . VARIABLE RESTA VARIABLE
    (72) expression -> . term
    (73) expression -> . VARIABLE
    (81) expression -> . PIZQ expression PDER
    (82) expression -> . LIZQ expression LDER
    (74) term -> . term MULTI factor
    (75) term -> . VARIABLE MULTI VARIABLE
    (76) term -> . term DIV factor
    (77) term -> . VARIABLE RESTA VARIABLE
    (78) term -> . factor
    (79) factor -> . ENTERO
    (80) factor -> . FLOAT

    VARIABLE        shift and go to state 54
    PIZQ            shift and go to state 13
    LIZQ            shift and go to state 14
    ENTERO          shift and go to state 38
    FLOAT           shift and go to state 39

    expression                     shift and go to state 55
    term                           shift and go to state 32
    factor                         shift and go to state 37

state 15

    (23) estrcontrol -> if .

    $end            reduce using rule 23 (estrcontrol -> if .)
    LDER            reduce using rule 23 (estrcontrol -> if .)


state 16

    (24) estrcontrol -> for .

    $end            reduce using rule 24 (estrcontrol -> for .)
    LDER            reduce using rule 24 (estrcontrol -> for .)


state 17

    (25) estrcontrol -> while .

    $end            reduce using rule 25 (estrcontrol -> while .)
    LDER            reduce using rule 25 (estrcontrol -> while .)


state 18

    (26) estrcontrol -> dowhile .

    $end            reduce using rule 26 (estrcontrol -> dowhile .)
    LDER            reduce using rule 26 (estrcontrol -> dowhile .)


state 19

    (27) estrcontrol -> switch .

    $end            reduce using rule 27 (estrcontrol -> switch .)
    LDER            reduce using rule 27 (estrcontrol -> switch .)


state 20

    (102) def_clase -> CLASS . VARIABLE LIZQ cuerpo_class LDER
    (103) def_clase -> CLASS . VARIABLE LIZQ LDER

    VARIABLE        shift and go to state 56


state 21

    (12) instruccion -> asignacion .

    PUNTOYCOMA      reduce using rule 12 (instruccion -> asignacion .)


state 22

    (13) instruccion -> expression .
    (68) expression -> expression . SUMA term
    (70) expression -> expression . RESTA term
    (56) comparacion -> expression . comparador expression
    (57) comparacion -> expression . comparador expression DAMPERSAND comparacion
    (58) comparacion -> expression . comparador expression DTUBO comparacion
    (60) comparador -> . MAYOR
    (61) comparador -> . MENOR
    (62) comparador -> . MAYIGUAL
    (63) comparador -> . MENIGUAL
    (64) comparador -> . DIGUAL
    (65) comparador -> . NOIGUAL

    PUNTOYCOMA      reduce using rule 13 (instruccion -> expression .)
    SUMA            shift and go to state 57
    RESTA           shift and go to state 58
    MAYOR           shift and go to state 60
    MENOR           shift and go to state 61
    MAYIGUAL        shift and go to state 62
    MENIGUAL        shift and go to state 63
    DIGUAL          shift and go to state 64
    NOIGUAL         shift and go to state 65

    comparador                     shift and go to state 59

state 23

    (14) instruccion -> comparacion .

    PUNTOYCOMA      reduce using rule 14 (instruccion -> comparacion .)


state 24

    (15) instruccion -> declaracion .

    PUNTOYCOMA      reduce using rule 15 (instruccion -> declaracion .)


state 25

    (16) instruccion -> declaasig .

    PUNTOYCOMA      reduce using rule 16 (instruccion -> declaasig .)


state 26

    (17) instruccion -> operadores .

    PUNTOYCOMA      reduce using rule 17 (instruccion -> operadores .)


state 27

    (32) if -> IF . PIZQ comparacion PDER LIZQ instrucciones LDER
    (33) if -> IF . PIZQ comparacion PDER LIZQ instrucciones LDER elseif
    (34) if -> IF . PIZQ comparacion PDER LIZQ instrucciones LDER else

    PIZQ            shift and go to state 66


state 28

    (40) for -> FOR . PIZQ declaasig PUNTOYCOMA comparacion PUNTOYCOMA operadores PDER LIZQ instrucciones LDER
    (41) for -> FOR . PIZQ declaasig PUNTOYCOMA comparacion PUNTOYCOMA asignacion PDER LIZQ instrucciones LDER
    (42) for -> FOR . PIZQ declaracion IN VARIABLE PDER LIZQ instrucciones LDER

    PIZQ            shift and go to state 67


state 29

    (43) while -> WHILE . PIZQ comparacion PDER LIZQ instrucciones LDER

    PIZQ            shift and go to state 68


state 30

    (44) dowhile -> DO . LIZQ instrucciones LDER WHILE PIZQ comparacion PDER

    LIZQ            shift and go to state 69


state 31

    (45) switch -> SWITCH . PIZQ VARIABLE PDER LIZQ cases LDER

    PIZQ            shift and go to state 70


state 32

    (72) expression -> term .
    (74) term -> term . MULTI factor
    (76) term -> term . DIV factor

    SUMA            reduce using rule 72 (expression -> term .)
    RESTA           reduce using rule 72 (expression -> term .)
    MAYOR           reduce using rule 72 (expression -> term .)
    MENOR           reduce using rule 72 (expression -> term .)
    MAYIGUAL        reduce using rule 72 (expression -> term .)
    MENIGUAL        reduce using rule 72 (expression -> term .)
    DIGUAL          reduce using rule 72 (expression -> term .)
    NOIGUAL         reduce using rule 72 (expression -> term .)
    PUNTOYCOMA      reduce using rule 72 (expression -> term .)
    PDER            reduce using rule 72 (expression -> term .)
    LDER            reduce using rule 72 (expression -> term .)
    DAMPERSAND      reduce using rule 72 (expression -> term .)
    DTUBO           reduce using rule 72 (expression -> term .)
    MULTI           shift and go to state 71
    DIV             shift and go to state 72


state 33

    (59) comparacion -> STRING . DIGUAL STRING

    DIGUAL          shift and go to state 73


state 34

    (18) declaracion -> VAR . VARIABLE
    (20) declaasig -> VAR . asignacion
    (53) asignacion -> . VARIABLE IGUAL expression
    (54) asignacion -> . VARIABLE IGUAL comparacion
    (55) asignacion -> . VARIABLE IGUAL valor

    VARIABLE        shift and go to state 74

    asignacion                     shift and go to state 75

state 35

    (19) declaracion -> LET . VARIABLE
    (21) declaasig -> LET . asignacion
    (53) asignacion -> . VARIABLE IGUAL expression
    (54) asignacion -> . VARIABLE IGUAL comparacion
    (55) asignacion -> . VARIABLE IGUAL valor

    VARIABLE        shift and go to state 76

    asignacion                     shift and go to state 77

state 36

    (22) declaasig -> CONST . asignacion
    (53) asignacion -> . VARIABLE IGUAL expression
    (54) asignacion -> . VARIABLE IGUAL comparacion
    (55) asignacion -> . VARIABLE IGUAL valor

    VARIABLE        shift and go to state 79

    asignacion                     shift and go to state 78

state 37

    (78) term -> factor .

    MULTI           reduce using rule 78 (term -> factor .)
    DIV             reduce using rule 78 (term -> factor .)
    SUMA            reduce using rule 78 (term -> factor .)
    RESTA           reduce using rule 78 (term -> factor .)
    MAYOR           reduce using rule 78 (term -> factor .)
    MENOR           reduce using rule 78 (term -> factor .)
    MAYIGUAL        reduce using rule 78 (term -> factor .)
    MENIGUAL        reduce using rule 78 (term -> factor .)
    DIGUAL          reduce using rule 78 (term -> factor .)
    NOIGUAL         reduce using rule 78 (term -> factor .)
    PUNTOYCOMA      reduce using rule 78 (term -> factor .)
    PDER            reduce using rule 78 (term -> factor .)
    LDER            reduce using rule 78 (term -> factor .)
    DAMPERSAND      reduce using rule 78 (term -> factor .)
    DTUBO           reduce using rule 78 (term -> factor .)


state 38

    (79) factor -> ENTERO .

    MULTI           reduce using rule 79 (factor -> ENTERO .)
    DIV             reduce using rule 79 (factor -> ENTERO .)
    SUMA            reduce using rule 79 (factor -> ENTERO .)
    RESTA           reduce using rule 79 (factor -> ENTERO .)
    MAYOR           reduce using rule 79 (factor -> ENTERO .)
    MENOR           reduce using rule 79 (factor -> ENTERO .)
    MAYIGUAL        reduce using rule 79 (factor -> ENTERO .)
    MENIGUAL        reduce using rule 79 (factor -> ENTERO .)
    DIGUAL          reduce using rule 79 (factor -> ENTERO .)
    NOIGUAL         reduce using rule 79 (factor -> ENTERO .)
    PUNTOYCOMA      reduce using rule 79 (factor -> ENTERO .)
    PDER            reduce using rule 79 (factor -> ENTERO .)
    LDER            reduce using rule 79 (factor -> ENTERO .)
    DAMPERSAND      reduce using rule 79 (factor -> ENTERO .)
    DTUBO           reduce using rule 79 (factor -> ENTERO .)


state 39

    (80) factor -> FLOAT .

    MULTI           reduce using rule 80 (factor -> FLOAT .)
    DIV             reduce using rule 80 (factor -> FLOAT .)
    SUMA            reduce using rule 80 (factor -> FLOAT .)
    RESTA           reduce using rule 80 (factor -> FLOAT .)
    MAYOR           reduce using rule 80 (factor -> FLOAT .)
    MENOR           reduce using rule 80 (factor -> FLOAT .)
    MAYIGUAL        reduce using rule 80 (factor -> FLOAT .)
    MENIGUAL        reduce using rule 80 (factor -> FLOAT .)
    DIGUAL          reduce using rule 80 (factor -> FLOAT .)
    NOIGUAL         reduce using rule 80 (factor -> FLOAT .)
    PUNTOYCOMA      reduce using rule 80 (factor -> FLOAT .)
    PDER            reduce using rule 80 (factor -> FLOAT .)
    LDER            reduce using rule 80 (factor -> FLOAT .)
    DAMPERSAND      reduce using rule 80 (factor -> FLOAT .)
    DTUBO           reduce using rule 80 (factor -> FLOAT .)


state 40

    (5) instrucciones -> instruccion PUNTOYCOMA .
    (6) instrucciones -> instruccion PUNTOYCOMA . instrucciones
    (5) instrucciones -> . instruccion PUNTOYCOMA
    (6) instrucciones -> . instruccion PUNTOYCOMA instrucciones
    (7) instrucciones -> . BREAK PUNTOYCOMA
    (8) instrucciones -> . CONTINUE PUNTOYCOMA
    (9) instrucciones -> . RETURN VARIABLE PUNTOYCOMA
    (10) instrucciones -> . TYPEOF VARIABLE
    (11) instrucciones -> . VARIABLE INSTANCEOF VARIABLE
    (12) instruccion -> . asignacion
    (13) instruccion -> . expression
    (14) instruccion -> . comparacion
    (15) instruccion -> . declaracion
    (16) instruccion -> . declaasig
    (17) instruccion -> . operadores
    (53) asignacion -> . VARIABLE IGUAL expression
    (54) asignacion -> . VARIABLE IGUAL comparacion
    (55) asignacion -> . VARIABLE IGUAL valor
    (68) expression -> . expression SUMA term
    (69) expression -> . VARIABLE SUMA VARIABLE
    (70) expression -> . expression RESTA term
    (71) expression -> . VARIABLE RESTA VARIABLE
    (72) expression -> . term
    (73) expression -> . VARIABLE
    (81) expression -> . PIZQ expression PDER
    (82) expression -> . LIZQ expression LDER
    (56) comparacion -> . expression comparador expression
    (57) comparacion -> . expression comparador expression DAMPERSAND comparacion
    (58) comparacion -> . expression comparador expression DTUBO comparacion
    (59) comparacion -> . STRING DIGUAL STRING
    (18) declaracion -> . VAR VARIABLE
    (19) declaracion -> . LET VARIABLE
    (20) declaasig -> . VAR asignacion
    (21) declaasig -> . LET asignacion
    (22) declaasig -> . CONST asignacion
    (66) operadores -> . VARIABLE DSUMA
    (67) operadores -> . VARIABLE DRESTA
    (74) term -> . term MULTI factor
    (75) term -> . VARIABLE MULTI VARIABLE
    (76) term -> . term DIV factor
    (77) term -> . VARIABLE RESTA VARIABLE
    (78) term -> . factor
    (79) factor -> . ENTERO
    (80) factor -> . FLOAT

    $end            reduce using rule 5 (instrucciones -> instruccion PUNTOYCOMA .)
    LDER            reduce using rule 5 (instrucciones -> instruccion PUNTOYCOMA .)
    CASE            reduce using rule 5 (instrucciones -> instruccion PUNTOYCOMA .)
    DEFAULT         reduce using rule 5 (instrucciones -> instruccion PUNTOYCOMA .)
    BREAK           shift and go to state 7
    CONTINUE        shift and go to state 8
    RETURN          shift and go to state 9
    TYPEOF          shift and go to state 11
    VARIABLE        shift and go to state 10
    PIZQ            shift and go to state 13
    LIZQ            shift and go to state 14
    STRING          shift and go to state 33
    VAR             shift and go to state 34
    LET             shift and go to state 35
    CONST           shift and go to state 36
    ENTERO          shift and go to state 38
    FLOAT           shift and go to state 39

    instruccion                    shift and go to state 6
    instrucciones                  shift and go to state 80
    asignacion                     shift and go to state 21
    expression                     shift and go to state 22
    comparacion                    shift and go to state 23
    declaracion                    shift and go to state 24
    declaasig                      shift and go to state 25
    operadores                     shift and go to state 26
    term                           shift and go to state 32
    factor                         shift and go to state 37

state 41

    (7) instrucciones -> BREAK PUNTOYCOMA .

    $end            reduce using rule 7 (instrucciones -> BREAK PUNTOYCOMA .)
    LDER            reduce using rule 7 (instrucciones -> BREAK PUNTOYCOMA .)
    CASE            reduce using rule 7 (instrucciones -> BREAK PUNTOYCOMA .)
    DEFAULT         reduce using rule 7 (instrucciones -> BREAK PUNTOYCOMA .)


state 42

    (8) instrucciones -> CONTINUE PUNTOYCOMA .

    $end            reduce using rule 8 (instrucciones -> CONTINUE PUNTOYCOMA .)
    LDER            reduce using rule 8 (instrucciones -> CONTINUE PUNTOYCOMA .)
    CASE            reduce using rule 8 (instrucciones -> CONTINUE PUNTOYCOMA .)
    DEFAULT         reduce using rule 8 (instrucciones -> CONTINUE PUNTOYCOMA .)


state 43

    (9) instrucciones -> RETURN VARIABLE . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 81


state 44

    (11) instrucciones -> VARIABLE INSTANCEOF . VARIABLE

    VARIABLE        shift and go to state 82


state 45
